fix CSS (Scrollbar)

--- a/src/container/list/list.module.css
+++ b/src/container/list/list.module.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
 .quizList {
   display: flex;
   flex-direction: column;
